--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "https://seattle-skyline-limo-server.onrender.com",
+  "proxy": "https://seattle-skyline-limo-server.watemtrade.com",
   "scripts": {
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
